src/objects/Resource_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Resource_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Resource Forecasts</relationshipLabel>
        <relationshipName>Resource_Forecasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Effort_Days__c</fullName>
        <inlineHelpText>No.of Days</inlineHelpText>
        <label>Effort Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit_Rate__c</fullName>
        <label>Unit Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>percent__c</fullName>
        <formula>IF(And(!ISBLANK(Start_Date__c),!ISBLANK(End_Date__c),(Start_Date__c= End_Date__c )),(Effort_Days__c/1),
IF(And(!ISBLANK(Start_Date__c),!ISBLANK(End_Date__c),!ISBLANK(Effort_Days__c)), 
(Effort_Days__c/((End_Date__c- Start_Date__c)+1)),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocation percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Resource Forecast</label>
    <nameField>
        <displayFormat>RF-{000000}</displayFormat>
        <label>Resource Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Start_Date_shold_be_lessthan_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c&gt; End_Date__c</errorConditionFormula>
        <errorMessage>Resource Forecast Start Date:Forecast Start Date should  be lessthan Forecast End Date</errorMessage>
    </validationRules>
</CustomObject>